data/derived/fa15/progs/unify/prog2033.ml.out
Characters 117-118:
  List.fold_left f [] args;;
                 ^
Error: This expression has type int -> int -> int list
       but an expression was expected of type int -> int -> int
       Type int list is not compatible with type int 
